fixed broken style

--- a/app/assets/stylesheets/modules/item_new.scss
+++ b/app/assets/stylesheets/modules/item_new.scss
@@ -220,7 +220,8 @@ body{
         width: 100%;
         margin-top: 16px;
         position: relative;
-        .select{
+        .select,
+        #item_category_id{
           @include selectBox;
         }
         .icon-arrow-down{
@@ -235,7 +236,8 @@ body{
         margin-top: 16px;
         position: relative;
         &__box{
-          &--select{
+          &--select,
+          #item_category_id{
             @include selectBox;
           }
           .icon-arrow-down{
